--- a/src/main/resources/pl/put/poznan/iwm/card/secondary.fxml
+++ b/src/main/resources/pl/put/poznan/iwm/card/secondary.fxml
@@ -1,18 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.ScrollPane?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Button?>
 <GridPane alignment="CENTER" vgap="20.0" hgap="10.0" xmlns="http://javafx.com/javafx/8.0.171"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.put.poznan.iwm.card.SecondaryController">
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="pl.put.poznan.iwm.card.SecondaryController"
+          styleClass="sec" fx:id="grid" prefHeight="700.0" prefWidth="1100.0">
+    <stylesheets>
+        <URL value="@secondary.css"/>
+    </stylesheets>
 
-    <fx:include source="titleTop.fxml" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+    <fx:include source="titleTop.fxml" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
 
+    <Button GridPane.columnIndex="0" GridPane.rowIndex="1" styleClass="backButton" onMouseClicked="#switchToPrimary"/>
 
+    <HBox GridPane.rowIndex="2" GridPane.columnIndex="0" spacing="30" alignment="CENTER">
+        <HBox alignment="CENTER" spacing="15">
+            <Label>From:</Label>
+            <DatePicker fx:id="from" />
+        </HBox>
+        <HBox alignment="CENTER" spacing="15">
+            <Label>To:</Label>
+            <DatePicker fx:id="to" />
+        </HBox>
+    </HBox>
+
+    <ScrollPane GridPane.rowIndex="3" GridPane.columnIndex="0"  fitToWidth="true">
+        <VBox spacing="15.0" fx:id="history" styleClass="history" alignment="CENTER" prefWidth="${grid.prefWidth}">
+            <padding>
+                <Insets left="20" right="20" top="20" bottom="20"/>
+            </padding>
+        </VBox>
+    </ScrollPane>
 
     <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" />
+        <ColumnConstraints hgrow="SOMETIMES"/>
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="45.0" maxHeight="45.0" vgrow="NEVER"/>
-        <RowConstraints vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="30.0" vgrow="NEVER"/>
+        <RowConstraints minHeight="60.0" maxHeight="60.0" vgrow="NEVER"/>
+        <RowConstraints vgrow="SOMETIMES"/>
     </rowConstraints>
 </GridPane>
