--- a/src/main/resources/pl/put/poznan/iwm/card/primary.fxml
+++ b/src/main/resources/pl/put/poznan/iwm/card/primary.fxml
@@ -8,6 +8,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.ProgressIndicator?>
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="400.0" prefHeight="700.0"
           prefWidth="1100.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1"
           fx:id="main" vgap="5" fx:controller="pl.put.poznan.iwm.card.PrimaryController">
@@ -18,18 +19,27 @@
     <fx:include source="titleTop.fxml" fx:id="title" minWidth="${main.prefWidth}" GridPane.columnIndex="0"
                 GridPane.rowIndex="0" GridPane.columnSpan="2"/>
 
-    <HBox GridPane.columnIndex="0" GridPane.rowIndex="1" alignment="CENTER" spacing="20">
-        <Text>Wyszukaj nazwisko:</Text>
-        <TextField fx:id="searchName" GridPane.columnIndex="1" GridPane.rowIndex="1" >
-            <!--            <padding>-->
-            <!--                <Insets top="5" bottom="5"/>-->
-            <!--            </padding>-->
-        </TextField>
-    </HBox>
+    <GridPane GridPane.columnIndex="0" GridPane.rowIndex="1">
+        <ProgressIndicator GridPane.columnIndex="0" fx:id="progress" visible="false" disable="true" />
+        <HBox GridPane.columnIndex="1" alignment="CENTER" spacing="20">
+<!--            <Text>Search by surname:</Text>-->
+            <TextField fx:id="searchName" GridPane.columnIndex="1" GridPane.rowIndex="1" promptText="Search by surname">
+                <!--            <padding>-->
+                <!--                <Insets top="5" bottom="5"/>-->
+                <!--            </padding>-->
+            </TextField>
+        </HBox>
+<!--        <padding><Insets top="20.0"/></padding>-->
+        <columnConstraints>
+            <ColumnConstraints halignment="CENTER" percentWidth="15" hgrow="SOMETIMES"/>
+            <ColumnConstraints halignment="CENTER" percentWidth="70" hgrow="SOMETIMES"/>
+            <ColumnConstraints halignment="CENTER" percentWidth="15" hgrow="SOMETIMES"/>
+        </columnConstraints>
+    </GridPane>
 
     <VBox GridPane.columnIndex="0" GridPane.rowIndex="2" GridPane.columnSpan="2">
         <padding>
-            <Insets top="20" bottom="30" left="50" right="50"/>
+            <Insets bottom="30" left="50" right="50"/>
         </padding>
         <GridPane hgap="10" style="-fx-background-color: steelblue">
             <Text style="-fx-font-weight: bold" GridPane.columnIndex="0">Full Name</Text>
@@ -54,7 +64,7 @@
     </columnConstraints>
     <rowConstraints>
         <RowConstraints minHeight="45.0" maxHeight="45.0" vgrow="NEVER"/>
-        <RowConstraints minHeight="35.0" maxHeight="35.0" vgrow="SOMETIMES"/>
+        <RowConstraints minHeight="65.0" maxHeight="65.0" vgrow="SOMETIMES"/>
         <RowConstraints vgrow="SOMETIMES" minHeight="70.0"/>
     </rowConstraints>
 
